syntax = "proto3";

option go_package = "github.com/jhump/protoreflect/internal/testprotos";

package testprotos;

import "google/protobuf/any.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/wrappers.proto";

import "desc_test1.proto";
import "pkg/desc_test_pkg.proto";

enum Proto3Enum {
	UNKNOWN = 0;
	VALUE1 = 1;
	VALUE2 = 2;
}

message TestRequest {
	repeated Proto3Enum foo = 1;
	string bar = 2;
	TestMessage baz = 3;
	TestMessage.NestedMessage.AnotherNestedMessage snafu = 4;
}

message TestWellKnownTypes {
	google.protobuf.Timestamp start_time = 1;
	google.protobuf.Duration elapsed = 2;

	google.protobuf.DoubleValue dbl = 3;
	google.protobuf.FloatValue flt = 4;
	google.protobuf.BoolValue bl = 5;
	google.protobuf.Int32Value i32 = 6;
	google.protobuf.Int64Value i64 = 7;
	google.protobuf.UInt32Value u32 = 8;
	google.protobuf.UInt64Value u64 = 9;
	google.protobuf.StringValue str = 10;
	google.protobuf.BytesValue byt = 11;

	repeated google.protobuf.Value json = 12;

	repeated google.protobuf.Any extras = 13;
}

message TestResponse {
	AnotherTestMessage atm = 1;
}

service TestService {
	rpc DoSomething (TestRequest) returns (jhump.protoreflect.desc.Bar);
	rpc DoSomethingElse (stream TestMessage) returns (TestResponse);
	rpc DoSomethingAgain (jhump.protoreflect.desc.Bar) returns (stream AnotherTestMessage);
	rpc DoSomethingForever (stream TestRequest) returns (stream TestResponse);
}
